Apply code quality suggestions by sonarcloud